hphp/hack/test/ifc/check/exception_multi_function.php.exp
=== IFC analysis results for exception_multi_function.php
File "exception_multi_function.php", line 31, characters 5-17:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "exception_multi_function.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "exception_multi_function.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "exception_multi_function.php", line 15, characters 5-13:
  Another program point contributing to the illegal flow
  File "exception_multi_function.php", line 14, characters 7-15:
  Another program point contributing to the illegal flow
  File "exception_multi_function.php", line 28, characters 5-14:
  Another program point contributing to the illegal flow
File "exception_multi_function.php", line 42, characters 5-17:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "exception_multi_function.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "exception_multi_function.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "exception_multi_function.php", line 21, characters 3-12:
  Another program point contributing to the illegal flow
  File "exception_multi_function.php", line 15, characters 5-13:
  Another program point contributing to the illegal flow
  File "exception_multi_function.php", line 14, characters 7-15:
  Another program point contributing to the illegal flow
  File "exception_multi_function.php", line 39, characters 5-15:
  Another program point contributing to the illegal flow
